file(GLOB hdf5lib_src "*.cpp")
file(GLOB hdf5lib_inc "*.h")

ADD_LIBRARY( hdf5lib STATIC ${hdf5lib_src} ${hdf5lib_inc} ) 
IF ( UNIX ) 
    include( /ace/fo1d/dev/users/tg75018/Aksana/work/ccrisk/cmake/hdf5_1_8_12-gcc44-ia64.cmake )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::hdf5_cpp )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::hdf5 )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::sz )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::z )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC dl )
ELSE ()
    include( C:/Users/ak18902/workspace5/ccrisk/ccrisk/cmake/hdf5_1_8_15-vc10-ia64.cmake )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::hdf5_cpp )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::zlib )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::szip )
    TARGET_LINK_LIBRARIES( hdf5lib PUBLIC hdf5::hdf5 )
ENDIF ()
